--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,10 @@ body {
   border-radius: 12px;
   background-color: transparent;
 }
+button:hover{
+  cursor: pointer;
+
+}
 
 .list-item{
   width: 100%;
@@ -100,4 +104,21 @@ body {
 .create:active{
   background-color: rgb(108, 115, 148);
   color: rgb(255, 255, 255);
+}
+
+
+.signout{
+  border: 1.5px solid rgb(255, 175, 163);
+  background-color: rgb(255, 175, 163) !important;
+  color: rgb(255, 255, 255);
+}
+
+.signout:hover{
+  background-color: rgb(175, 94, 94) !important;
+  border: 1.5px solid rgb(175, 94, 94);
+}
+.signout:active{
+  border: 1.5px solid rgb(179, 59, 59);
+  background-color: rgb(179, 59, 59) !important;
+  color: rgb(255 , 255 , 255);
 }
